--- a/Django/pelicula/static/css/style.css
+++ b/Django/pelicula/static/css/style.css
@@ -1,11 +1,24 @@
+body {
+    background: #f12711;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #f5af19, #f12711);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #f5af19, #f12711); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+}
+
 .container {
     display: flex;
 }
-
-
-
 .cardtemplates {
     margin: 20px;
 }
 
+.titulo {
+    color:#fff;
+    text-align: center;
+}
 
+
+.imgcard {
+    height: 200px;
+    width: 180px;
+}
